--- a/AFCS/src/main/resources/application.properties
+++ b/AFCS/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 server.port = 8180
 
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-#spring.datasource.url= jdbc:mysql://localhost:3306/rishilocaldatabase
-#spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.url= jdbc:mysql://localhost:3306/rishilocaldatabase?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
 
-spring.datasource.url= jdbc:mysql://localhost:3306/afcs_db
-spring.datasource.username=gopal
-spring.datasource.password=gopal@123!#
+#spring.datasource.url= jdbc:mysql://localhost:3306/afcs_db?useSSL=false
+#spring.datasource.username=gopal
+#spring.datasource.password=gopal@123!#
 spring.datasource.tomcat.max-wait=20000
 spring.datasource.tomcat.max-active=50
 spring.datasource.tomcat.max-idle=20
